terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_key_pair" "monitoring" {
  key_name   = "monitoring-stack"
  public_key = file("~/.ssh/monitoring-stack.pub")
}

resource "aws_security_group" "monitoring" {
  name        = "monitoring-stack-sg"
  description = "Allow access to monitoring stack ports"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "FastAPI"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Prometheus"
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Grafana"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Alertmanager"
    from_port   = 9093
    to_port     = 9093
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "monitoring" {
  ami                    = "ami-0c7217cdde317cfec"
  instance_type          = "t3.micro"
  key_name               = aws_key_pair.monitoring.key_name
  vpc_security_group_ids = [aws_security_group.monitoring.id]

  tags = {
    Name = "monitoring-stack"
  }
}

output "instance_ip" {
  value       = aws_instance.monitoring.public_ip
  description = "Public IP of the monitoring stack EC2 instance"
}
resource "aws_eip" "monitoring" {
  instance = aws_instance.monitoring.id
}

output "elastic_ip" {
  value       = aws_eip.monitoring.public_ip
  description = "Static Elastic IP of the monitoring stack"
}
